<resources>
    <string name="app_name">CarpoolUN</string>

    <!-- SignInActivity -->
    <string name="title_activity_sign_in">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >= 8 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="login_successful">Login successful</string>
    <string name="do_not_have_account">Do not have an account? Sign up here:</string>

    <!-- SignUpActivity -->
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="hint_user_name">Name</string>
    <string name="hint_user_lastName">Last time</string>
    <string name="hint_password">Password</string>
    <string name="hint_password_confirmation">Password confirmation</string>
    <string name="action_sign_up">Sign up</string>
    <string name="already_have_account">Already have an account? Log in here:</string>
    <string name="user_created_successfully">Account created successfully</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="failed_to_create_user">An error occurred while creating the user</string>

    <!-- CarpoolListFragment -->
    <string name="carpoolListFragment_title">Carpools</string>
    <string name="carpoolListFragment_titleTypeGoes">Goes to: %1$s</string>
    <string name="carpoolListFragment_titleTypeComes">Comes from: %1$s</string>
    <string name="carpoolListFragment_capacity">Seats available: %1$s/%2$s</string>
    <string name="carpoolListFragment_driver">Driver: %1$s</string>
    <string name="carpoolListFragment_time">Departure at: %1$s</string>
    <string name="carpoolListFragment_fee">Fee: %1$s</string>

    <!-- ProfileFragment -->
    <string name="profileFragment_title">Profile</string>
    <string name="profile_update_data">Update info</string>
    <string name="profile_logOut">Log out</string>
    <string name="profile_email">Email:</string>

    <!-- SearchCarpoolActivity -->
    <string name="searchCarpoolActivity_title">Find a carpool</string>
    <string name="searchCarpoolActivity_selectDate">Select departure date</string>
    <string name="fragmentCarpoolForm_selectTime">Select departure time</string>
    <string name="fragmentCarpoolForm_neighbourhood">neighbourhood:</string>
    <string name="searchCarpoolActivity_search">Search</string>

    <!-- Carpool Form-->
    <string name="createCarpoolActivity_date">Departure date:</string>
    <string name="fragmentCarpoolForm_time">Departure time:</string>
    <string name="createCarpoolActivity_comeOrGoes">Come or goes:</string>
    <string name="carpoolFormFragment_capacity">Capacity:</string>
    <string name="createCarpoolActivity_fee">Fee:</string>


    <!-- CreateCarpoolActivity -->
    <string name="createCarpoolActivity_title">Create a carpool</string>
    <string name="createCarpoolActivity_create">Create</string>
    <string name="must_specify_capacity">Must specify carpool capacity</string>
    <string name="must_specify_fee">Must specify carpool type</string>
    <string name="carpool_created_successfully">Carpool created successfully</string>

    <string-array name="createCarpoolActivity_comeOrGoesList">
        <item>Comes to UN</item>
        <item>Departs from UN</item>
    </string-array>

    <!-- errors -->
    <string name="problem_connecting_to_server">There was a problem connecting to server</string>
    <string name="invalid_response">There is a problem with the server\'s response</string>

    <!-- SearchResultsActivity -->
    <string name="searchResultsActivity_title">Search results</string>
    <string name="must_select_time_and_date">Must selected valid time and date</string>
    <string name="must_select_neighbourhood">Must selected a neighbourhood</string>
    <string name="must_select_type">Must selected carpool type</string>
    
    <!-- Test values -->
    <string name="test_user_email">niquefa.diego@gmail.com</string>
    <string name="test_user_name">Diego Niquefa</string>
    <string name="test_carpoolTitle">Goes to: Tintal</string>
    <string name="test_carpoolCapacity">Seats available: 3/5</string>
    <string name="test_carpoolDriver">Driver: Juan Perez</string>
    <string name="test_carpoolTime">Departure at: 2019-07-18 06:30</string>
    <string name="test_carpoolFee">Fee: 3000</string>
    <string name="title_activity_create_carpool">CreateCarpool</string>

</resources>
