<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
            android:id="@+id/itemCarpool_parentLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                        android:id="@+id/itemCarpool_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:text="@string/test_carpoolTitle"/>

                <TextView
                    android:id="@+id/itemCarpool_driver"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:text="@string/test_carpoolDriver"/>

                <TextView
                    android:id="@+id/itemCarpool_capacity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:text="@string/test_carpoolCapacity"/>

                <TextView
                    android:id="@+id/itemCarpool_departureTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:text="@string/test_carpoolTime"/>

                <TextView
                    android:id="@+id/itemCarpool_fee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:text="@string/test_carpoolFee"/>



        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>