<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
            android:padding="8dp">
    <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/createCarpoolActivity_date"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <TextView
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:id="@+id/fragmentCarpoolForm_date"
                android:hint="@string/searchCarpoolActivity_selectDate"
                android:layout_width="match_parent"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:text="@string/fragmentCarpoolForm_time"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <TextView
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:id="@+id/searchCarpoolActivity_time"
                android:hint="@string/fragmentCarpoolForm_selectTime"
                android:layout_width="wrap_content"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:layout_height="wrap_content"/>
    </LinearLayout>


    <LinearLayout
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                android:text="@string/fragmentCarpoolForm_neighbourhood"
                android:layout_width="wrap_content"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:layout_height="wrap_content"/>

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="10"
                android:id="@+id/fragmentCarpoolForm_neighbourhood"/>

    </LinearLayout>

    <LinearLayout
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
                android:text="@string/createCarpoolActivity_comeOrGoes"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <Spinner
                android:id="@+id/fragmentCarpoolForm_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
    </LinearLayout>


    <LinearLayout
            android:orientation="vertical"
            android:visibility="visible"
            android:id="@+id/carpoolFormFragment_createCarpoolPart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    android:text="@string/carpoolFormFragment_capacity"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/fragmentCarpoolForm_capacity"/>
        </LinearLayout>

        <LinearLayout
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    android:text="@string/createCarpoolActivity_fee"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/fragmentCarpoolForm_fee"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>