<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:elevation="6dp">

        <LinearLayout
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:id="@+id/profileFragment_email_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/test_user_email"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_email"
                        android:layout_marginRight="6dp"
                        android:layout_marginEnd="6dp"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>
            </LinearLayout>

            <TextView
                    android:id="@+id/profileFragment_name_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/test_user_name"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <Button
                        android:id="@+id/profileFragment_logOut_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_logOut"
                        style="?android:attr/buttonBarButtonStyle"/>

                <Button
                        android:id="@+id/profile_updateData_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_update_data"
                        android:textColor="@color/colorPrimaryDark"
                        style="?android:attr/buttonBarButtonStyle"/>
            </LinearLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <FrameLayout
            android:id="@+id/profileFragment_fragmentContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp">
    </FrameLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fragmentProfile_FAB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_gravity="end|bottom"
            app:srcCompat="@drawable/ic_directions_car_black_24dp"
            android:focusable="true"
            android:layout_margin="16dp"
            app:fabSize="normal"
            app:backgroundTint="@color/colorPrimary"
            app:elevation="6dp"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>